--- a/UI/static/css/main.css
+++ b/UI/static/css/main.css
@@ -262,7 +262,7 @@ nav > a{
   .main-nav {
     display:grid;
     grid-gap:2px;
-    grid-template-columns:1fr  1fr 1fr;
+    grid-template-columns:1fr 1fr;
   }
 
   
